<resources>
    <string name="app_name">CRUD Retrofit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gabriel Sierra</string>
    <string name="nav_header_subtitle">Programador .NET/ Android</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="No_Network_Connection">Sin Conexión</string>
    <string name="Connection">Conectado</string>
    <string name="hello_blank_fragment">Fragmentos en blanco</string>
    <string name="form_fragment">9:28	Project setup started

        9:28	Gradle sync finished in 4 s 862 ms (from cached state)

        10:13	Executing tasks: [:app:assembleDebug]

        10:14	Gradle build finished in 50 s 882 ms

        Android 5.1 (Google APIs) API 22
        Packages to install:
        - Google APIs Intel x86 Atom System Image (system-images;android-22;google_apis;x86)

        Preparing "Install Google APIs Intel x86 Atom System Image (revision: 22)".
        Downloading https://dl.google.com/android/repository/sys-img/google_apis/x86-22_r22.zip
        "Install Google APIs Intel x86 Atom System Image (revision: 22)" ready.
        Installing Google APIs Intel x86 Atom System Image in C:\Users\gsierra\AppData\Local\Android\Sdk\system-images\android-22\google_apis\x86
        "Install Google APIs Intel x86 Atom System Image (revision: 22)" complete.
        "Install Google APIs Intel x86 Atom System Image (revision: 22)" finished.</string>

    <string-array name="Provincias">
        <item>Buenos Aires</item>
        <item>Santa Fe</item>
        <item>Cordoba</item>
        <item>Entre Rios</item>
        <item>Misiones</item>
        <item>Tucuman</item>
    </string-array>

    <string-array name="Sexo">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="tipoIdentificacion">
        <item>Pasaporte</item>
        <item>Libreta Civica</item>
        <item>Cédula de Identidad</item>
        <item>Libreta de Enrolamiento</item>
        <item>D.N.I</item>
    </string-array>
    <string-array name="Ocupaciones">
        <item>Programador</item>
        <item>Albañil</item>
        <item>Ingenierio</item>
        <item>Policia</item>
    </string-array>
    <string name="VersioApp">Version 1.0</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Numero DNI</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_login_in">Iniciar Sesion</string>
    <string name="action_sign_in">Registrarse</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="error_invalid_email">El DNI es invalido</string>
    <string name="error_invalid_password">La contraseña es demasiado corta</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
